--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -3,35 +3,39 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="wrap_content">
+                                             android:layout_height="wrap_content"
+                                             android:background="?android:attr/selectableItemBackground">
 
     <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/title_tv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
-            tools:text="Title" app:layout_constraintStart_toEndOf="@+id/date_tv"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginLeft="8dp"
+            tools:text="Title"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"/>
     <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/summary_tv" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/title_tv" app:layout_constraintStart_toStartOf="@+id/date_tv"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/summary_tv"
+            app:layout_constraintEnd_toEndOf="@+id/title_tv"
             app:layout_constraintHorizontal_bias="0.0"
             tools:text="summary" app:layout_constraintBottom_toTopOf="@+id/imageView"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginBottom="8dp" app:layout_constraintStart_toEndOf="@+id/date_tv"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+            app:layout_constraintTop_toTopOf="@+id/date_tv" android:textStyle="italic"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/date_tv" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
-            tools:text="Date"/>
+            android:id="@+id/date_tv"
+            tools:text="Date"
+            app:layout_constraintStart_toStartOf="@+id/title_tv"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/title_tv"/>
     <ImageView
             android:layout_width="0dp"
-            android:layout_height="1dp" app:srcCompat="@android:color/black"
+            android:layout_height="1dp" app:srcCompat="@android:color/darker_gray"
             android:id="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
