Create business logic for News Screen

--- a/app/src/main/res/layout/news_bottom.xml
+++ b/app/src/main/res/layout/news_bottom.xml
@@ -8,7 +8,9 @@
                                               android:layout_height="wrap_content"
                                               app:layout_constraintTop_toTopOf="parent"
                                               app:layout_constraintStart_toStartOf="parent"
-                                              app:layout_constraintEnd_toEndOf="parent" android:id="@+id/tags_fl">
+                                              app:layout_constraintEnd_toEndOf="parent" android:id="@+id/tags_fl"
+                                              app:flexWrap="wrap"
+    >
 
     </com.google.android.flexbox.FlexboxLayout>
     <Button
