--- a/app/src/main/res/layout/news_head.xml
+++ b/app/src/main/res/layout/news_head.xml
@@ -11,14 +11,17 @@
             android:id="@+id/date_tv"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp" tools:text="Date"
-            app:layout_constraintTop_toBottomOf="@+id/title_tv" android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
+            android:textSize="12sp"/>
     <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/title_tv" tools:text="Title"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"/>
+            android:layout_marginRight="8dp"
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/date_tv" android:textSize="24sp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:textColor="@android:color/black"/>
 </android.support.constraint.ConstraintLayout>
