--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -15,29 +15,32 @@
             tools:text="Title"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="8dp" android:textSize="20sp" android:textColor="@android:color/black"/>
     <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/summary_tv"
             app:layout_constraintEnd_toEndOf="@+id/title_tv"
             app:layout_constraintHorizontal_bias="0.0"
-            tools:text="summary" app:layout_constraintBottom_toTopOf="@+id/imageView"
-            android:layout_marginBottom="8dp" app:layout_constraintStart_toEndOf="@+id/date_tv"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="@+id/date_tv" android:textStyle="italic"/>
+            tools:text="summary"
+            android:textStyle="italic" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/title_tv" app:layout_constraintStart_toStartOf="@+id/title_tv"
+            android:textSize="16sp"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/date_tv"
             tools:text="Date"
-            app:layout_constraintStart_toStartOf="@+id/title_tv"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/title_tv"/>
+            app:layout_constraintStart_toStartOf="@+id/summary_tv"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/summary_tv"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/imageView"
+            android:textSize="14sp"/>
     <ImageView
             android:layout_width="0dp"
-            android:layout_height="1dp" app:srcCompat="@android:color/darker_gray"
+            android:layout_height="0.5dp" app:srcCompat="@android:color/darker_gray"
             android:id="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="1dp"/>
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
 </android.support.constraint.ConstraintLayout>
