--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,8 +13,13 @@
         <item name="android:textSize">12sp</item>
     </style>
 
-    <style name="OriginalUtlStyleButton" parent="Widget.MaterialComponents.Button.TextButton">
+    <style name="OriginalUrlStyleButton" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:textColor">@android:color/holo_blue_dark</item>
         <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="SubscribeTagButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:strokeColor">@android:color/white</item>
+        <item name="android:textColor">@android:color/white</item>
     </style>
 </resources>
