--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="match_parent"
-             android:layout_width="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="match_parent"
+              android:layout_width="match_parent"
+              android:orientation="vertical"
+android:weightSum="10">
 
     <fragment
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="9"
             app:navGraph="@navigation/main_nav_graph"
             app:defaultNavHost="true"
             android:id="@+id/main_container"/>
-</FrameLayout>
+
+    <android.support.design.widget.BottomNavigationView android:id="@+id/bottom_nav_view"
+                                                        android:layout_width="match_parent"
+                                                        android:layout_height="0dp"
+                                                        android:layout_weight="1"
+                                                        android:background="?colorPrimary"
+                                                        app:itemIconTint="@android:color/white"
+                                                        app:itemTextColor="@android:color/white"
+                                                        app:menu="@menu/bottom_nav_view_menu"/>
+</LinearLayout>
