--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="match_parent"
-              android:layout_width="match_parent"
-              android:orientation="vertical"
-android:weightSum="10">
+              android:layout_width="match_parent">
 
     <fragment
             android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="9"
             app:navGraph="@navigation/main_nav_graph"
             app:defaultNavHost="true"
-            android:id="@+id/main_container"/>
+            android:id="@+id/main_container"
+            app:layout_constraintBottom_toTopOf="@+id/bottom_nav_view" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
 
     <android.support.design.widget.BottomNavigationView android:id="@+id/bottom_nav_view"
                                                         android:layout_width="match_parent"
                                                         android:layout_height="0dp"
-                                                        android:layout_weight="1"
                                                         android:background="?colorPrimary"
                                                         app:itemIconTint="@android:color/white"
                                                         app:itemTextColor="@android:color/white"
-                                                        app:menu="@menu/bottom_nav_view_menu"/>
-</LinearLayout>
+                                                        app:menu="@menu/bottom_nav_view_menu"
+                                                        app:layout_constraintEnd_toEndOf="parent"
+                                                        app:layout_constraintStart_toStartOf="parent"
+                                                        app:layout_constraintBottom_toBottomOf="parent"/>
+</android.support.constraint.ConstraintLayout>
