--- a/app/src/main/res/layout/fragment_user_news.xml
+++ b/app/src/main/res/layout/fragment_user_news.xml
@@ -4,11 +4,9 @@
              android:layout_height="match_parent"
              tools:context="my.dzeko.footapp.view.fragment.UserNewsFragment">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="User news Fragment"
-    android:textColor="@android:color/holo_blue_bright"/>
+            android:layout_height="match_parent"/>
 
 </FrameLayout>
