--- a/app/src/main/res/menu/bottom_nav_view_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_view_menu.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/newsListFragment"
-          android:title="@string/all_news"/>
+          android:title="@string/all_news"
+          android:icon="@drawable/ic_news"/>
 
     <item android:id="@+id/userNewsListFragment"
-          android:title="@string/user_news"/>
+          android:title="@string/user_news"
+          android:icon="@drawable/ic_user_news"/>
 </menu>
