--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="match_parent"
-              android:layout_width="match_parent">
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent">
 
-    <fragment
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:navGraph="@navigation/main_nav_graph"
-            app:defaultNavHost="true"
-            android:id="@+id/main_container"
-            app:layout_constraintBottom_toTopOf="@+id/bottom_nav_view" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
+    <android.support.design.widget.CoordinatorLayout android:layout_width="0dp"
+                                                     android:layout_height="0dp"
+                                                     app:layout_constraintBottom_toTopOf="@+id/bottom_nav_view"
+                                                     app:layout_constraintTop_toTopOf="parent"
+                                                     app:layout_constraintStart_toStartOf="parent"
+                                                     app:layout_constraintEnd_toEndOf="parent">
+
+        <android.support.design.widget.AppBarLayout android:id="@+id/app_bar_layout"
+                                                    android:layout_width="match_parent"
+                                                    android:layout_height="wrap_content"
+                                                    >
+            <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
+                                               android:layout_width="match_parent"
+                                               android:layout_height="?attr/actionBarSize"
+                                               app:layout_scrollFlags="scroll|enterAlways" android:theme="@style/AppToolBarTheme"/>
+        </android.support.design.widget.AppBarLayout>
+
+        <fragment
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:navGraph="@navigation/main_nav_graph"
+                app:defaultNavHost="true"
+                android:id="@+id/main_container"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        />
+
+    </android.support.design.widget.CoordinatorLayout>
 
     <android.support.design.widget.BottomNavigationView android:id="@+id/bottom_nav_view"
-                                                        android:layout_width="match_parent"
+                                                        android:layout_width="wrap_content"
                                                         android:layout_height="0dp"
                                                         android:background="?colorPrimary"
-                                                        app:itemIconTint="@android:color/white"
-                                                        app:itemTextColor="@android:color/white"
+                                                        app:itemIconTint="@color/bottom_nav_view_item_color"
+                                                        app:itemTextColor="@color/bottom_nav_view_item_color"
                                                         app:menu="@menu/bottom_nav_view_menu"
+                                                        app:layout_constraintBottom_toBottomOf="parent"
                                                         app:layout_constraintEnd_toEndOf="parent"
-                                                        app:layout_constraintStart_toStartOf="parent"
-                                                        app:layout_constraintBottom_toBottomOf="parent"/>
+                                                        app:layout_constraintStart_toStartOf="parent"/>
+
+
 </android.support.constraint.ConstraintLayout>
