--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -1,14 +1,29 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="my.dzeko.footapp.view.fragment.SplashScreenFragment">
+             tools:context="my.dzeko.footapp.view.fragment.SplashScreenFragment"
+android:background="@color/colorPrimaryDark">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Splash screen"
-            android:gravity="center"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:gravity="center" app:layout_constraintStart_toStartOf="@+id/logo_iv"
+            app:layout_constraintTop_toBottomOf="@+id/logo_iv"
+            app:layout_constraintEnd_toEndOf="@+id/logo_iv" android:layout_marginTop="16dp"
+            android:textColor="@android:color/white" android:textSize="44sp"
+            android:fontFamily="sans-serif-medium"/>
+    <ImageView
+            app:srcCompat="@drawable/football_ball_image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:id="@+id/logo_iv" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintHorizontal_bias="0.497"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.35" android:tint="@android:color/white"/>
 
-</FrameLayout>
+</android.support.constraint.ConstraintLayout>
