--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -2,44 +2,44 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools" android:id="@+id/main_nav_graph"
-            app:startDestination="@id/splashScreenFragment">
+            app:startDestination="@id/splashScreenFragment"
+            android:label="@string/app_name">
 
     <fragment android:id="@+id/splashScreenFragment" android:name="my.dzeko.footapp.view.fragment.SplashScreenFragment"
-              android:label="fragment_splash_screen" tools:layout="@layout/fragment_splash_screen">
+              tools:layout="@layout/fragment_splash_screen">
         <action android:id="@+id/action_splashScreenFragment_to_newsListFragment"
                 app:destination="@id/newsListFragment"
                 app:popUpTo="@id/splashScreenFragment"
                 app:popUpToInclusive="true"/>
     </fragment>
     <fragment android:id="@+id/newsListFragment" android:name="my.dzeko.footapp.view.fragment.NewsListFragment"
-              android:label="fragment_news_list" tools:layout="@layout/fragment_news_list">
+               android:label="@string/all_news" tools:layout="@layout/fragment_news_list">
         <action android:id="@+id/action_newsListFragment_to_newsFragment" app:destination="@id/newsFragment"/>
         <action android:id="@+id/action_newsListFragment_to_userNewsListFragment"
                 app:destination="@id/userNewsListFragment" app:launchSingleTop="true" app:popUpToInclusive="false"/>
         <action android:id="@+id/action_newsListFragment_to_searchTagFragment" app:destination="@id/searchTagFragment"/>
     </fragment>
     <fragment android:id="@+id/userNewsListFragment" android:name="my.dzeko.footapp.view.fragment.UserNewsFragment"
-              android:label="fragment_user_news" tools:layout="@layout/fragment_user_news">
+              android:label="@string/user_news" tools:layout="@layout/fragment_user_news">
         <action android:id="@+id/action_userNewsListFragment_to_newsFragment" app:destination="@id/newsFragment"/>
         <action android:id="@+id/action_userNewsListFragment_to_searchTagFragment"
                 app:destination="@id/searchTagFragment"/>
     </fragment>
     <fragment android:id="@+id/newsFragment" android:name="my.dzeko.footapp.view.fragment.NewsFragment"
-              android:label="fragment_news" tools:layout="@layout/fragment_news">
+              android:label="@string/news" tools:layout="@layout/fragment_news">
         <argument android:name="newsId" app:argType="long" android:defaultValue="-1L"/>
         <action android:id="@+id/action_newsFragment_to_tagedNewsListFragment"
                 app:destination="@id/tagedNewsListFragment"/>
     </fragment>
     <fragment android:id="@+id/tagedNewsListFragment"
-              android:name="my.dzeko.footapp.view.fragment.TagedNewsListFragment"
-              android:label="fragment_taged_news_list" tools:layout="@layout/fragment_taged_news_list">
+              android:label="@string/taged_news_list" android:name="my.dzeko.footapp.view.fragment.TagedNewsListFragment"
+              tools:layout="@layout/fragment_taged_news_list">
         <argument android:name="tagId" app:argType="long"/>
         <action android:id="@+id/action_tagedNewsListFragment_to_newsFragment" app:destination="@id/newsFragment"/>
     </fragment>
-
-    <fragment android:id="@+id/searchTagFragment"
+    <fragment android:id="@+id/searchTagFragment" android:label="@string/search_tag"
               android:name="my.dzeko.footapp.view.fragment.SearchTagFragment"
-              android:label="fragment_search_tag" tools:layout="@layout/fragment_search_tag">
+              tools:layout="@layout/fragment_search_tag">
         <action android:id="@+id/action_searchTagFragment_to_userNewsListFragment"
                 app:destination="@id/userNewsListFragment"/>
         <action android:id="@+id/action_searchTagFragment_to_tagedNewsListFragment"
