--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -34,7 +34,7 @@
             app:layout_constraintStart_toStartOf="@+id/summary_tv"
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/summary_tv"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/imageView"
-            android:textSize="14sp"/>
+            android:textSize="14sp" android:fontFamily="sans-serif-medium"/>
     <ImageView
             android:layout_width="0dp"
             android:layout_height="0.5dp" app:srcCompat="@android:color/darker_gray"
