--- a/app/src/main/res/layout/fragment_search_tag.xml
+++ b/app/src/main/res/layout/fragment_search_tag.xml
@@ -9,8 +9,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/search_view_background"
             android:id="@+id/tag_sv" android:orientation="horizontal"
-            android:iconifiedByDefault="false"/>
+            android:iconifiedByDefault="false" android:queryHint="@string/tag_query_hint"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" android:paddingBottom="10dp" android:paddingTop="10dp"/>
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -18,5 +21,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tag_sv" android:layout_marginTop="8dp"
-            android:id="@+id/recycler_view"/>
+            android:id="@+id/recycler_view" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0"/>
 </android.support.constraint.ConstraintLayout>
