--- a/app/src/main/res/layout/tags_list_item.xml
+++ b/app/src/main/res/layout/tags_list_item.xml
@@ -6,20 +6,31 @@
                                              android:layout_height="wrap_content"
                                              android:background="?android:attr/selectableItemBackground">
 
+    <ImageView
+            android:layout_width="0dp"
+            android:layout_height="0.5dp" app:srcCompat="@android:color/darker_gray"
+            android:id="@+id/imageView2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/name_tv" android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="parent" tools:text="Hashtag name"/>
+            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent" tools:text="Hashtag name" android:textSize="18sp"
+            android:fontFamily="sans-serif-medium"/>
     <ImageButton
-            android:layout_width="32dp"
-            android:layout_height="32dp" app:srcCompat="@drawable/selected_tag_button_drawable"
+            android:layout_width="36dp"
+            android:layout_height="36dp" app:srcCompat="@drawable/selected_tag_button_drawable"
             android:id="@+id/is_selected_btn" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/name_tv"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
             app:layout_constraintHorizontal_bias="1.0"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
             android:background="?android:attr/selectableItemBackground"/>
 </android.support.constraint.ConstraintLayout>
