--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,8 +26,8 @@
     </style>
 
     <style name="OriginalUrlStyleButton" parent="Widget.MaterialComponents.Button.TextButton">
-        <item name="android:textColor">@android:color/holo_blue_dark</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#283593</item>
+        <item name="android:textSize">12sp</item>
     </style>
 
     <style name="SubscribeTagButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
