--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,7 +19,10 @@
         <item name="colorControlNormal">@android:color/white</item>
     </style>
 
-
+    <style name="CollapsingToolBarControlStyle" >
+        <item name="colorControlNormal">@android:color/white</item>
+    </style>
+    
     <style name="TagButtonStyle" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:textColor">@android:color/darker_gray</item>
         <item name="android:textSize">12sp</item>
