--- a/app/src/main/res/layout/fragment_taged_news_list.xml
+++ b/app/src/main/res/layout/fragment_taged_news_list.xml
@@ -1,11 +1,37 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto">
+    <android.support.design.widget.AppBarLayout android:id="@+id/app_bar_layout"
+                                                android:layout_width="match_parent"
+                                                android:layout_height="wrap_content">
+        <android.support.design.widget.CollapsingToolbarLayout android:layout_width="match_parent"
+                                                               android:id="@+id/collapsing_toolbar"
+                                                               android:layout_height="match_parent"
+                                                               app:contentScrim="?colorPrimary"
+                                                               app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed"
+                                                               app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
+        android:theme="@style/CollapsingToolBarControlStyle">
 
-    <include
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             layout="@layout/fragment_news_list"/>
+            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:background="?android:colorBackground"
+                          app:layout_collapseMode="parallax">
+                <include layout="@layout/news_list_tag_item"
+                         android:layout_height="match_parent" android:layout_width="match_parent"/>
+            </LinearLayout>
 
-</FrameLayout>
+            <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
+                                               android:layout_width="match_parent"
+                                               android:layout_height="?attr/actionBarSize"
+                                                app:layout_collapseMode="pin"/>
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
+                                            android:layout_height="match_parent"
+                                            android:id="@+id/recycler_view"
+                                            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+</android.support.design.widget.CoordinatorLayout>
 
