--- a/app/src/main/res/layout/news_list_tag_item.xml
+++ b/app/src/main/res/layout/news_list_tag_item.xml
@@ -1,23 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="wrap_content"
-                                             android:background="@color/colorAccent">
-    <TextView
-            android:textColor="@android:color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tag_name_tv" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="64dp" tools:text="Hashtag"/>
-    <Button
-            style="@style/SubscribeTagButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/subscribe_btn" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/tag_name_tv" app:layout_constraintEnd_toEndOf="@+id/tag_name_tv"
-            app:layout_constraintStart_toStartOf="@+id/tag_name_tv" android:layout_marginBottom="64dp"
-            app:layout_constraintBottom_toBottomOf="parent" tools:text="Subscribe"/>
-</android.support.constraint.ConstraintLayout>
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                                    xmlns:tools="http://schemas.android.com/tools"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    app:cardBackgroundColor="@color/colorPrimary"
+                                    app:cardElevation="8dp">
+
+    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
+                                                 android:layout_height="match_parent">
+        <TextView
+                android:textColor="@android:color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tag_name_tv" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="64dp" tools:text="Hashtag"
+                android:textSize="24sp" android:fontFamily="sans-serif-medium"/>
+        <Button
+                style="@style/SubscribeTagButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/subscribe_btn" android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/tag_name_tv"
+                app:layout_constraintEnd_toEndOf="@+id/tag_name_tv"
+                app:layout_constraintStart_toStartOf="@+id/tag_name_tv" android:layout_marginBottom="64dp"
+                app:layout_constraintBottom_toBottomOf="parent" tools:text="Subscribe"/>
+    </android.support.constraint.ConstraintLayout>
+
+</android.support.v7.widget.CardView>
