--- a/app/src/main/res/layout/news_bottom.xml
+++ b/app/src/main/res/layout/news_bottom.xml
@@ -6,7 +6,7 @@
                                              android:layout_height="wrap_content">
     <ImageView
             android:layout_width="0dp"
-            android:layout_height="0.5dp" app:srcCompat="@android:color/darker_gray"
+            android:layout_height="0.5dp" app:srcCompat="@color/colorTagsBorder"
             android:id="@+id/imageView4"
             app:layout_constraintTop_toBottomOf="@+id/tags_fl" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="@dimen/tags_line_border" android:layout_marginStart="@dimen/tags_line_border"
@@ -15,7 +15,7 @@
     />
     <ImageView
             android:layout_width="0dp"
-            android:layout_height="0.5dp" app:srcCompat="@android:color/darker_gray"
+            android:layout_height="0.5dp" app:srcCompat="@color/colorTagsBorder"
             android:id="@+id/imageView3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView"
@@ -27,7 +27,7 @@
                                               app:layout_constraintStart_toStartOf="parent"
                                               app:layout_constraintEnd_toEndOf="parent" android:id="@+id/tags_fl"
                                               app:flexWrap="wrap"
-                                              app:justifyContent="flex_start"
+                                              app:justifyContent="center"
                                               app:layout_constraintTop_toBottomOf="@+id/textView"
     >
 
@@ -35,7 +35,7 @@
 
     <ImageView
             android:layout_width="0dp"
-            android:layout_height="0.5dp" app:srcCompat="@android:color/darker_gray"
+            android:layout_height="0.5dp" app:srcCompat="@color/colorTagsBorder"
             android:id="@+id/imageView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/textView"
@@ -45,7 +45,7 @@
 
     <android.support.design.button.MaterialButton
             android:text="@string/original_source_text"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/original_url_btn"
             app:layout_constraintStart_toStartOf="parent"
@@ -60,9 +60,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView"
+            android:textColor="@color/colorTagsBorder"
             app:layout_constraintStart_toStartOf="@+id/original_url_btn"
             app:layout_constraintEnd_toEndOf="@+id/original_url_btn" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.22" tools:text="Tags"
-            android:textSize="16sp" android:fontFamily="sans-serif-medium" android:layout_marginTop="8dp"
+            android:layout_marginRight="8dp" tools:text="Tags"
+            android:textSize="18sp" android:fontFamily="sans-serif-medium" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"/>
 </android.support.constraint.ConstraintLayout>
