Replace executors on coroutines in parser. Add ParseNewsWorker and schedule it every 20 minutes. Change news receiving.

--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -11,9 +11,9 @@
     <ProgressBar android:id="@+id/progress_bar"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
-                style="@style/Base.Widget.AppCompat.ProgressBar"
+                 style="@style/Base.Widget.AppCompat.ProgressBar"
                  android:layout_gravity="center"
-                 android:visibility="gone"/>
+                 android:visibility="visible"/>
 
     <include layout="@layout/empty_list_layout"
              android:id="@+id/empty_view"
